--- a/my_deploy.yml
+++ b/my_deploy.yml
@@ -3,9 +3,10 @@ kind: Deployment
 metadata:
   name: my_deploy_project2
 spec:
-  replica: 3
+  replicas: 3
   selector: 
-  
+    matchLabels:
+      app: project2-pod  
   templets:
     metadata: 
       labels:
