--- a/my_deploy.yml
+++ b/my_deploy.yml
@@ -7,7 +7,7 @@ spec:
   selector: 
     matchLabels:
       app: project2-pod  
-  templet:
+  template:
     metadata: 
       labels:
         apps: project2-pod
