--- a/my_deploy.yml
+++ b/my_deploy.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my_deploy_project2
+  name: my-deploy-project2
 spec:
   replicas: 3
   selector: 
